config for netlify deploy

--- a/package.json
+++ b/package.json
@@ -1,9 +1,11 @@
 {
-  "name": "NeteaseCloudMusicApi",
+  "name": "NetlifyNeteaseAPI",
   "version": "4.8.2",
-  "description": "网易云音乐 NodeJS 版 API",
+  "description": "网易云音乐 NodeJS 版 API (Netlify)",
   "scripts": {
     "start": "node app.js",
+    "netlify-start": "netlify-lambda serve ./",
+    "netlify-build": "netlify-lambda build ./",
     "test": "mocha -r intelli-espower-loader -t 60000 server.test.js main.test.js --exit",
     "lint": "eslint \"**/*.{js,ts}\"",
     "lint-fix": "eslint --fix \"**/*.{js,ts}\"",
@@ -56,6 +58,7 @@
     "express-fileupload": "^1.1.9",
     "md5": "^2.3.0",
     "music-metadata": "^7.5.3",
+    "netlify-lambda": "^2.0.15",
     "pac-proxy-agent": "^5.0.0",
     "qrcode": "^1.4.4",
     "safe-decode-uri-component": "^1.2.1",
