--- a/package.json
+++ b/package.json
@@ -53,6 +53,7 @@
     "public"
   ],
   "dependencies": {
+    "@babel/preset-flow": "^7.18.6",
     "axios": "^0.24.0",
     "express": "^4.17.1",
     "express-fileupload": "^1.1.9",
