add babel presets

--- a/package.json
+++ b/package.json
@@ -84,5 +84,10 @@
     "power-assert": "1.6.1",
     "prettier": "2.7.1",
     "typescript": "4.5.2"
+  },
+  "babel": {
+    "presets": [
+      "@babel/preset-flow"
+    ]
   }
 }
